sol/2021_p2_f2_retangulo.txt
Retângulo
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 64.0 MB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2021f2p1_retangulo.cpp: In function ‘int main()’:
2021f2p1_retangulo.cpp:19:20: error: ‘accumulate’ was not declared in this scope
   19 |     if (sum * 2 == accumulate(lengths.begin(), lengths.end(), 0)) {
      |                    ^~~~~~~~~~
